--- a/src/styles/containers/_navbar.scss
+++ b/src/styles/containers/_navbar.scss
@@ -40,7 +40,6 @@
     position: absolute;
     top: 50px;
     right: 0;
-    padding: 2rem;
     border-radius: 8px;
     .navbar__menu-container-links {
         display: flex;
@@ -48,6 +47,7 @@
         text-align: end;
         justify-content: space-evenly;
         color: $color-text;
+        padding: 1.5rem;
         p {
             font-size: 20px;
             margin: 1rem 0.5rem;
@@ -63,5 +63,29 @@
         margin: 2rem;
         display: block;
     }
+    .navbar__logo {
+        .logo {
+            width: 70px;
+            height: 70px;
+        }
+    }
 }
 
+@media screen and (max-width: 700px) {
+    .navbar__logo {
+        .logo {
+            width: 50px;
+            height: 50px;
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .navbar__logo {
+        .logo {
+            margin: 2rem;
+            width: 30px;
+            height: 30px;
+        }
+    }
+}
