--- a/src/styles/containers/_skills.scss
+++ b/src/styles/containers/_skills.scss
@@ -20,6 +20,7 @@
         }
     }
     .skills__title-section {
+        padding-top: 0;
         .title__detail {
             width: 38px;
             height: 3px;
