--- a/src/styles/containers/_projects.scss
+++ b/src/styles/containers/_projects.scss
@@ -47,6 +47,7 @@
     .project__image {
         width: 100%;
         .project__img {
+            border-radius: 10px;
             width: 100%;
             height: 100px;
             cursor: pointer;
