--- a/src/styles/containers/_skills.scss
+++ b/src/styles/containers/_skills.scss
@@ -35,7 +35,18 @@
 }
 
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1100px) {
+    .skills {
+        .skills__title-section {
+            padding: 1rem;
+            .skills__title {
+                font-size: 25px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 920px) {
     .skills {
         display: flex;
         flex-direction: column-reverse;
@@ -45,7 +56,7 @@
     }
 }
 
-@media screen and (max-width: 590px) {
+@media screen and (max-width: 760px) {
     .skills {
         padding: 2rem;
         margin: 1rem 10rem;
