--- a/src/styles/containers/_projects.scss
+++ b/src/styles/containers/_projects.scss
@@ -46,17 +46,23 @@
     }
     .project__image {
         width: 100%;
+        height: 40%;
         .project__img {
             border-radius: 10px;
             width: 100%;
             height: 100px;
             cursor: pointer;
+            opacity: 0.7;
+            &:hover {
+                opacity: 1;
+            }
         }
     }
     .project__content {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        margin-top: 8px;
         h4 {
             padding: 0 0 0.5rem 0; 
             font-size: 18px;
@@ -72,6 +78,7 @@
             align-items: center;
             padding: 0.5rem;
             gap: 10px;
+            margin-top: 8px;
             svg {
                 font-size: 20px;
                 cursor: pointer;
