--- a/src/styles/containers/_projects.scss
+++ b/src/styles/containers/_projects.scss
@@ -2,8 +2,7 @@
 
 .projects__section {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
     align-items: center;
     padding: 4rem;
     color: white;
@@ -19,22 +18,18 @@
             .projects__title {
                 font-size: 2rem;
             }
-            .projects__image {
-                width: 350px;
-                height: 400px;
-            }
         }
     }
 
+
+
 .project__container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     padding: 0.8rem;
-    margin: 0.5rem;
-    width: 340px;
-    height: 240px;
+    margin: 1rem;
+    width: 750px;
+    height: 200px;
     background: $color-footer;
     background:-moz-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%);
     background:-webkit-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%);
@@ -45,24 +40,29 @@
      border-radius: 10px;
     }
     .project__image {
-        width: 100%;
-        height: 40%;
+        width: 90%;
+        height: 90%;
+        text-align: center;
         .project__img {
+            object-fit: cover;
             border-radius: 10px;
-            width: 100%;
-            height: 100px;
+            margin-top: 6px;
+            width: 95%;
+            height: 90%;
             cursor: pointer;
-            opacity: 0.7;
+            height: 162px;
             &:hover {
-                opacity: 1;
+                opacity: 0.7;
             }
         }
     }
     .project__content {
         display: flex;
         flex-direction: column;
+        align-items: stretch;
         justify-content: space-between;
-        margin-top: 8px;
+        height: 200px;
+        padding: 10px 0 10px 0;
         h4 {
             padding: 0 0 0.5rem 0; 
             font-size: 18px;
@@ -76,9 +76,8 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-            padding: 0.5rem;
+            padding: 0.5rem 0 0.8rem 0;
             gap: 10px;
-            margin-top: 8px;
             svg {
                 font-size: 20px;
                 cursor: pointer;
@@ -87,6 +86,10 @@
 
     }
 }
+
+.reverse{
+    color: black;
+  }
 
 @media screen and (max-width: 920px) {
     .projects__section {
