[update] responsive styles

--- a/src/styles/containers/_about.scss
+++ b/src/styles/containers/_about.scss
@@ -47,22 +47,20 @@
     }
 }
 
-@media screen and (max-width: 1050px) {
+@media screen and (max-width:768px) {
    .about {
-      display: flex;
-      flex-direction: column-reverse;
-      margin-bottom: 5rem;
-      .image {
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         img {
-             width: 80%;
-             height: 80%;
-         } 
+      .image img {
+         width: 320px;
+         height: 280px;
+      }
+      .about__container {
+         padding: 20px;
+         .title {
+            font-size: 20px;
+         }
+         .about__me {
+            font-size: 14px;
+         }
       }
    }
 }
-
-
-
