--- a/src/styles/containers/_navbar.scss
+++ b/src/styles/containers/_navbar.scss
@@ -58,43 +58,14 @@
     }
 }
 
-@media screen and (max-width: 1050px) {
-    .navbar__links {
-        display: none;
-    }
-    .navbar__menu {
-        margin: 2rem;
-        display: block;
-    }
-    .navbar__logo {
-        .logo {
-            width: 70px;
-            height: 70px;
-        }
-    }
-}
 
-@media screen and (max-width: 700px) {
-    .navbar__logo {
-        .logo {
-            width: 50px;
-            height: 50px;
-        }
+@media screen and (max-width: 769px) {
+    .navbar__logo .logo {
+        width: 50px;
+        height: 50px;
+        margin-top: 20px;
     }
-}
-
-@media screen and (max-width: 700px) {
-    .navbar__logo {
-        .logo {
-            margin: 2rem;
-            width: 30px;
-            height: 30px;
-        }
-    }
-}
-
-@media screen and (max-width: 700px) {
-    .navbar {
-        padding: 0 2rem;
+    .navbar__links p a{
+        font-size: 16px;
     }
 }
