--- a/src/styles/containers/_skills.scss
+++ b/src/styles/containers/_skills.scss
@@ -12,8 +12,8 @@
     .skills__logos {
         display: flex;
         justify-content: space-evenly;
-        gap: 30px;
-        align-items: center;
+        gap: 20px;
+        margin-right: 10px;
         img {
             width: 50px;
             height: 50px;
@@ -34,47 +34,20 @@
     }
 }
 
-
-@media screen and (max-width: 1100px) {
+@media screen and (max-width:768px) {
     .skills {
-        .skills__title-section {
-            padding: 1rem;
-            .skills__title {
-                font-size: 25px;
-            }
-        }
-    }
-}
-
-@media screen and (max-width: 920px) {
-    .skills {
-        display: flex;
-        flex-direction: column-reverse;
-    }
-    .skills__title-section {
-        padding: 2rem;
-    }
-}
-
-@media screen and (max-width: 760px) {
-    .skills {
-        padding: 2rem;
-        margin: 1rem 10rem;
-        .skills__title-section {
-            padding-top: 0.5rem;
-            .skills__title {
-                font-size: 28px;
-            }
-        }
+        margin: 4rem 2rem;
         .skills__logos {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+            img {
+                width: 40px;
+                height: 40px;
+            }
         }
-    }
-}
-
-@media screen and (max-width: 512px) {
-    .skills {
-        margin: 5rem;
-    }
+        .skills__title-section {
+            .skills__title {
+                font-size: 24px;
+            }
+        }
+    }    
 }
