--- a/src/styles/containers/_skills.scss
+++ b/src/styles/containers/_skills.scss
@@ -51,3 +51,36 @@
         }
     }    
 }
+
+@media screen and (max-width:758px) {
+    .skills {
+        min-width: 320px;
+        .skills__logos {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+        .skills__title-section {
+            margin-left: 10px;
+            .skills__title {
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:320px) {
+    .skills {
+        display: flex;
+        flex-direction: column-reverse;
+        min-width: 250px;
+        .skills__logos {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+        .skills__title-section {
+            .skills__title {
+                margin-bottom: 15px;
+            }
+        }
+    }
+}
