--- a/src/styles/containers/_home.scss
+++ b/src/styles/containers/_home.scss
@@ -26,7 +26,7 @@
             flex-direction: row;
             align-items: center;
             .btn__contact {
-                padding: 1rem;
+                padding: 0.7rem;
                 border: none;
                 font-size: 18px;
                 border-radius: 10px;
@@ -36,12 +36,12 @@
                 }
             }
             .btn__icons {
-                display: flex;
+                margin-left: 1rem;
             }
             .btn__linkedin,
             .btn__github, 
             .btn__twitter {
-                margin: 0 1.5rem;
+                margin: 0 0.6rem;
                 cursor: pointer;
             }
         }
