[update] lang eng - styles

--- a/src/styles/containers/_about.scss
+++ b/src/styles/containers/_about.scss
@@ -38,7 +38,7 @@
          }
          .title {
             font-size: 26px;
-            font-weight: bold;
+            font-weight: 600;
             margin-bottom: 1.5rem;
          }
          .about__me {
