--- a/src/styles/containers/_skills.scss
+++ b/src/styles/containers/_skills.scss
@@ -30,6 +30,7 @@
         .skills__title {
             color: $color-footer;
             font-size: 36px;
+            font-weight: 600;
         }
     }
 }
