--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap');
 @import '../styles/variables';
 
 * {
