--- a/src/styles/containers/_contact.scss
+++ b/src/styles/containers/_contact.scss
@@ -18,6 +18,7 @@
         }
         .contact__title {
             margin-bottom: 10px;
+            font-weight: 600;
         }
         .contact__email {
             display: flex;
@@ -87,7 +88,6 @@
                 font-size: 1.2rem;
                 cursor: pointer;
                 &:hover {
-                    font-weight: bold;
                     color: white;
                 }
             }
