--- a/src/styles/containers/_home.scss
+++ b/src/styles/containers/_home.scss
@@ -8,11 +8,11 @@
     .home__content {
         display: flex;
         flex-direction: column;
-        // align-items: stretch;
         margin: 1.5rem;
         width: 50%;
         h1 {
             font-size: 46px;
+            font-weight: 600;
         }
         p {
             font-size: 20px;
