--- a/src/styles/containers/_projects.scss
+++ b/src/styles/containers/_projects.scss
@@ -17,6 +17,7 @@
             }
             .projects__title {
                 font-size: 2rem;
+                font-weight: 600;
             }
         }
     }
@@ -64,10 +65,12 @@
         h4 {
             padding: 0 0 0.5rem 0; 
             font-size: 18px;
+            font-weight: 600;
         }
         p {
             color: $color-text;
             font-size: 13px;
+            line-height: 1.2rem;
         }
         .project__icons {
             display: flex;
