--- a/src/styles/containers/_contact.scss
+++ b/src/styles/containers/_contact.scss
@@ -19,6 +19,7 @@
         .contact__title {
             margin-bottom: 10px;
             font-weight: 600;
+            font-size: 2rem;
         }
         .contact__email {
             display: flex;
