--- a/src/styles/containers/_home.scss
+++ b/src/styles/containers/_home.scss
@@ -26,9 +26,9 @@
             flex-direction: row;
             align-items: center;
             .btn__contact {
-                padding: 0.7rem;
+                padding: 0.5rem 1.5rem;
                 border: none;
-                font-size: 18px;
+                font-size: 1.2rem;
                 border-radius: 10px;
                 cursor: pointer;
                 &:hover {
