--- a/src/styles/containers/_about.scss
+++ b/src/styles/containers/_about.scss
@@ -37,12 +37,14 @@
             @include text-detail
          }
          .title {
-            font-size: 26px;
+            font-size: 2rem;
             font-weight: 600;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
          }
          .about__me {
             color: $color-text;
+            font-size: 1rem;
+            line-height: 1.5rem;
          }
     }
 }
