--- a/src/styles/containers/_skills.scss
+++ b/src/styles/containers/_skills.scss
@@ -4,6 +4,7 @@
     padding: 2rem;
     display: flex;
     flex-direction: row;
+    gap: 1rem;
     align-items: center;
     justify-content: space-evenly;
     border: none;
@@ -15,8 +16,8 @@
         gap: 20px;
         margin-right: 10px;
         img {
-            width: 50px;
-            height: 50px;
+            width: 55px;
+            height: 55px;
         }
     }
     .skills__title-section {
@@ -29,7 +30,7 @@
         }
         .skills__title {
             color: $color-footer;
-            font-size: 36px;
+            font-size: 2.3rem;
             font-weight: 600;
         }
     }
