[update] styles/assets [add] animation

--- a/src/styles/containers/_contact.scss
+++ b/src/styles/containers/_contact.scss
@@ -5,9 +5,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 1rem;
     margin-bottom: 0;
     color: white;
+    background-color: #031B34;
     .contact__info {
         display: flex;
         align-items: center;
