--- a/src/styles/containers/_about.scss
+++ b/src/styles/containers/_about.scss
@@ -8,9 +8,9 @@
     align-items: center;
     gap: 2rem;
     .image {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      // transform: rotate(180deg);
+      display: block;
+      animation: rotate 30s infinite linear;
       img {
          width: 500px;
          height: 440px;
@@ -47,6 +47,14 @@
             line-height: 1.5rem;
          }
     }
+}
+
+@keyframes rotate {
+   0% {
+      transform: rotate(0deg);
+   } 100% {
+      transform: rotate(360deg);
+   }
 }
 
 @media screen and (max-width:768px) {
