--- a/src/styles/containers/_home.scss
+++ b/src/styles/containers/_home.scss
@@ -5,17 +5,18 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 3.5rem 3rem;
     .home__content {
         display: flex;
         flex-direction: column;
         margin: 1.5rem;
         width: 50%;
         h1 {
-            font-size: 46px;
+            font-size: 58px;
             font-weight: 600;
         }
         p {
-            font-size: 20px;
+            font-size: 22px;
             color: $color-text;
             margin: 0.2rem;
         }
@@ -50,9 +51,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 500px;
+        height: 530px;
         img {
-            width: 80%;
-            height: 80%;
+            width: 100%;
+            height: 100%;
         }
     }
 }
