--- a/src/styles/containers/_projects.scss
+++ b/src/styles/containers/_projects.scss
@@ -22,12 +22,18 @@
         }
     }
 
-.project__container {
+.projects__grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+
+.project__container {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    gap: 0.5rem;
     padding: 0.8rem;
     margin: 1rem;
-    width: 750px;
+    min-width: 580px;
     height: 200px;
     background: $color-footer;
     background:-moz-radial-gradient(circle at 30% -100%, #042c54 25%, rgba(4, 44, 84, 1) 85%, rgba(27, 120, 222, 1) 100%);
@@ -39,8 +45,8 @@
      border-radius: 10px;
     }
     .project__image {
-        width: 90%;
-        height: 90%;
+        width: 100%;
+        height: 100%;
         text-align: center;
         .project__img {
             object-fit: cover;
