--- a/src/styles/containers/_whyMe.scss
+++ b/src/styles/containers/_whyMe.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   gap: 1.5rem;
   align-items: center;
-  height: 550px;
   margin-bottom: 3rem;
   .whyMe__title-container {
       .title__detail {
@@ -35,6 +34,28 @@
         font-size: 1rem;
         font-weight: 300;
         line-height: 1.5rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1180px) {
+  .whyMe {
+    .whyMe__container {
+      .whyMe__card {
+        width: 300px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .whyMe {
+    .whyMe__container {
+      flex-direction: column-reverse;
+      .whyMe__card {
+        width: 500px;
+        height: 300px;
       }
     }
   }
