--- a/src/styles/containers/_home.scss
+++ b/src/styles/containers/_home.scss
@@ -16,9 +16,21 @@
             font-weight: 600;
         }
         p {
-            font-size: 22px;
+            font-size: 24px;
             color: $color-text;
             margin: 0.2rem;
+        }
+        .tech__container {
+            display: flex;
+            margin: 0.5rem 0;
+            justify-content: flex-start;
+            align-items: center;
+            padding: 0.5rem 0;
+            gap: 15px;
+            img {
+                width: 40px;
+                height: 35px;
+            }
         }
         .btn {
             margin: 1rem;
