--- a/src/styles/containers/_home.scss
+++ b/src/styles/containers/_home.scss
@@ -28,8 +28,9 @@
             padding: 0.5rem 0;
             gap: 15px;
             img {
+                margin: auto 5px;
                 width: 40px;
-                height: 35px;
+                height: 40px;
             }
         }
         .btn {
