--- a/src/styles/containers/_navbar.scss
+++ b/src/styles/containers/_navbar.scss
@@ -71,3 +71,17 @@
         display: none;
     }
 }
+
+@media screen and (min-width: 1500px) {
+    .navbar {
+        padding-right: 5rem;
+        padding-left: 5rem;
+    }
+}
+
+@media screen and (min-width: 1800px) {
+    .navbar {
+        padding-right: 10rem;
+        padding-left: 10rem;
+    }
+}
